# convexity-hunter

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/samples/: sample-candidate-report.en.md  sample-candidate-report.md  sample-candidate-report.zh-CN.md
docs/: development-workflow.md  market-data-contracts.md  mvp-spec.md  philosophy.md  project-state.md  screening-policy.md
examples/: sample_candidate_report.py
src/convexity_hunter/: __init__.py  evidence.py  market.py  market_data.py  market_data_transformations.py  report.py  scanner.py  world.py
tests/: __init__.py  market_data_fixtures.py  screening_fixtures.py  test_candidate_research_record.py  test_domain.py  test_evidence_records.py  test_market_data.py  test_market_data_transformations.py  test_report_records.py  test_report_rendering.py  test_scanner.py
