[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "convexity-hunter"
version = "0.1.0"
description = "A research assistant for identifying potential positive-convexity opportunities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Convexity Hunter contributors" },
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
